--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <!-- Mailchimp Form Will Be Embedded Here -->
     <div id="signup-form">
-        <iframe src="YOUR_MAILCHIMP_EMBED_LINK_HERE" width="400" height="300" style="border: none;"></iframe>
+        <iframe src="<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/8f29e0f23140b621a05075731/599fd802e7ae9f17b5bdddad2.js");</script>" width="400" height="300" style="border: none;"></iframe>
     </div>
 </body>
 </html>
