--- a/index.html
+++ b/index.html
@@ -5,18 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CrossIt.ai - Coming Soon</title>
     <style>
-        body { text-align: center; font-family: Arial, sans-serif; margin-top: 100px; }
+        body { 
+            text-align: center; 
+            font-family: Arial, sans-serif; 
+            margin-top: 100px; 
+        }
         h1 { font-size: 32px; }
         p { font-size: 18px; color: #666; }
+        #signup-form {
+            margin-top: 20px;
+        }
+        iframe {
+            max-width: 100%;
+            width: 400px;
+            height: 300px;
+            border: none;
+        }
     </style>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/8f29e0f23140b621a05075731/599fd802e7ae9f17b5bdddad2.js");</script>
 </head>
 <body>
     <h1>CrossIt.ai</h1>
     <p>Be the first to know when we launch.</p>
     
-    <!-- Mailchimp Form Will Be Embedded Here -->
+    <!-- Mailchimp Form Embed -->
     <div id="signup-form">
-        <iframe src="<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/8f29e0f23140b621a05075731/599fd802e7ae9f17b5bdddad2.js");</script>" width="400" height="300" style="border: none;"></iframe>
+        <iframe src="YOUR_MAILCHIMP_EMBED_LINK_HERE" width="400" height="300"></iframe>
     </div>
 </body>
 </html>
