--- a/index.html
+++ b/index.html
@@ -5,32 +5,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CrossIt.ai - Coming Soon</title>
     <style>
-        body { 
-            text-align: center; 
-            font-family: Arial, sans-serif; 
-            margin-top: 100px; 
-        }
+        body { text-align: center; font-family: Arial, sans-serif; margin-top: 100px; }
         h1 { font-size: 32px; }
         p { font-size: 18px; color: #666; }
-        #signup-form {
-            margin-top: 20px;
-        }
-        iframe {
-            max-width: 100%;
-            width: 400px;
-            height: 300px;
-            border: none;
-        }
+        #mc_embed_signup { background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px; margin: 20px auto; }
+        .mc-field-group { margin-bottom: 10px; }
+        .button { background-color: #ff4b4b; color: white; padding: 10px 20px; border: none; cursor: pointer; }
+        .button:hover { background-color: #d63b3b; }
     </style>
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/8f29e0f23140b621a05075731/599fd802e7ae9f17b5bdddad2.js");</script>
 </head>
 <body>
     <h1>CrossIt.ai</h1>
     <p>Be the first to know when we launch.</p>
     
-    <!-- Mailchimp Form Embed -->
-    <div id="signup-form">
-        <iframe src="YOUR_MAILCHIMP_EMBED_LINK_HERE" width="400" height="300"></iframe>
+    <!-- Mailchimp Embedded Signup Form -->
+    <div id="mc_embed_signup">
+        <form action="https://crossit.us14.list-manage.com/subscribe/post?u=8f29e0f23140b621a05075731&amp;id=5d60bfb86e&amp;f_id=00bac2e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+            <div id="mc_embed_signup_scroll">
+                <h2>Subscribe</h2>
+                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                
+                <div class="mc-field-group">
+                    <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
+                    <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required>
+                </div>
+
+                <div class="mc-field-group">
+                    <label for="mce-FNAME">First Name <span class="asterisk">*</span></label>
+                    <input type="text" name="FNAME" class="required text" id="mce-FNAME" required>
+                </div>
+
+                <div class="mc-field-group">
+                    <label for="mce-LNAME">Last Name</label>
+                    <input type="text" name="LNAME" class="text" id="mce-LNAME">
+                </div>
+
+                <div class="mc-field-group">
+                    <label for="mce-PHONE">Phone Number</label>
+                    <input type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE">
+                </div>
+
+                <div class="mc-field-group">
+                    <label for="mce-COMPANY">Company</label>
+                    <input type="text" name="COMPANY" class="text" id="mce-COMPANY">
+                </div>
+
+                <div id="mce-responses" class="clear foot">
+                    <div class="response" id="mce-error-response" style="display: none;"></div>
+                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                </div>
+
+                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                    <input type="text" name="b_8f29e0f23140b621a05075731_5d60bfb86e" tabindex="-1" value="">
+                </div>
+
+                <div class="optionalParent">
+                    <div class="clear foot">
+                        <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
+
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+    <script type="text/javascript">
+        (function($) {
+            window.fnames = new Array();
+            window.ftypes = new Array();
+            fnames[0]='EMAIL'; ftypes[0]='email';
+            fnames[1]='FNAME'; ftypes[1]='text';
+            fnames[2]='LNAME'; ftypes[2]='text';
+            fnames[4]='PHONE'; ftypes[4]='phone';
+            fnames[6]='COMPANY'; ftypes[6]='text';
+            fnames[3]='ADDRESS'; ftypes[3]='address';
+            fnames[5]='BIRTHDAY'; ftypes[5]='birthday';
+        }(jQuery));
+        var $mcj = jQuery.noConflict(true);
+    </script>
 </body>
 </html>
