--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         </div>
         <div class="container">
             <div class="logo-container">
-                <img src="/Crossitai.png" alt="CrossIt.ai Logo">
+                <img src="/Public/Crossitai.png" alt="CrossIt.ai Logo">
             </div>
             <p class="tagline">Revolutionizing AI Integration Across Platforms</p>
             <p class="hero-description">
@@ -496,9 +496,10 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#" aria-label="Twitter">T</a>
-                <a href="#" aria-label="LinkedIn">L</a>
-                <a href="#" aria-label="Facebook">F</a>
+                <a href="public/X_logo.jpg" aria-label="X">X</a>
+                <a href="public/File_LinkedIn_icon.svg" aria-label="LinkedIn">L</a>
+                <a href="public/File_Instagram_logo_2016.svg" aria-label="Instagram">L</a>
+                <a href="public/File_Facebook_logo_(square).png" aria-label="Facebook">F</a>
             </div>
             <p class="footer-text">&copy; 2025 CrossIt.ai. All rights reserved.</p>
         </div>
