--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#" aria-label="X">X</a>
+                <a href="#" aria-label="Twitter">T</a>
                 <a href="#" aria-label="LinkedIn">L</a>
                 <a href="#" aria-label="Facebook">F</a>
             </div>
