Frontend first check

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         </div>
         <div class="container">
             <div class="logo-container">
-                <img src="/Public/Crossitai.png" alt="CrossIt.ai Logo">
+                <img src="Public/Crossitai.png" alt="CrossIt.ai Logo">
             </div>
             <p class="tagline">Revolutionizing AI Integration Across Platforms</p>
             <p class="hero-description">
