--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CrossIt.ai - Coming Soon</title>
+    <!-- Favicon implementation with multiple formats for better browser compatibility -->
+    <link rel="icon" href="favicon.ico">
     <link rel="icon" href="Public/FAVICON.png" type="image/png">
+    <link rel="apple-touch-icon" href="Public/FAVICON.png">
+    <link rel="shortcut icon" href="Public/FAVICON.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
     <style>
