--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CrossIt.ai - Coming Soon</title>
     <!-- Favicon implementation with multiple formats for better browser compatibility -->
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="/FAVICON.png" type="image/png">
+    <link rel="icon" href="public/FAVICON.png" type="image/png">
     <link rel="apple-touch-icon" href="Public/FAVICON.png">
     <link rel="shortcut icon" href="Public/FAVICON.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -393,7 +393,7 @@
         </div>
         <div class="container">
             <div class="logo-container">
-                <img src="/Crossitai.png" alt="CrossIt.ai Logo">
+                <img src="public/Crossitai.png" alt="CrossIt.ai Logo">
             </div>
             <p class="tagline">Revolutionizing AI Integration Across Platforms</p>
             <p class="hero-description">
@@ -507,10 +507,10 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#" aria-label="X (Twitter)"><img src="/X_logo.jpg" alt="X (Twitter) Logo"></a>
-                <a href="#" aria-label="LinkedIn"><img src="/LinkedIn_logo.svg" alt="LinkedIn Logo"></a>
-                <a href="#" aria-label="Facebook"><img src="/Facebook_logo.svg" alt="Facebook Logo"></a>
-                <a href="#" aria-label="Instagram"><img src=/Instagram_logo.svg" alt="Instagram Logo"></a>
+                <a href="#" aria-label="X (Twitter)"><img src="public/X_logo.jpg" alt="X (Twitter) Logo"></a>
+                <a href="#" aria-label="LinkedIn"><img src="public/LinkedIn_logo.svg" alt="LinkedIn Logo"></a>
+                <a href="#" aria-label="Facebook"><img src="public/Facebook_logo.svg" alt="Facebook Logo"></a>
+                <a href="#" aria-label="Instagram"><img src=public/Instagram_logo.svg" alt="Instagram Logo"></a>
             </div>
             <p class="footer-text">&copy; 2025 CrossIt.ai. All rights reserved.</p>
         </div>
