--- a/index.html
+++ b/index.html
@@ -507,10 +507,18 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#" aria-label="X (Twitter)"><img src="/X_logo.jpg" alt="X (Twitter) Logo"></a>
-                <a href="#" aria-label="LinkedIn"><img src="/LinkedIn_logo.svg" alt="LinkedIn Logo"></a>
-                <a href="#" aria-label="Facebook"><img src="/Facebook_logo.svg" alt="Facebook Logo"></a>
-                <a href="#" aria-label="Instagram"><img src=/Instagram_logo.svg" alt="Instagram Logo"></a>
+                <a href="#" aria-label="X (Twitter)">
+                    <img src="/X_logo.jpg" alt="X (Twitter) Logo">
+                </a>
+                <a href="#" aria-label="LinkedIn">
+                    <img src="/LinkedIn_logo.svg" alt="LinkedIn Logo">
+                </a>
+                <a href="#" aria-label="Facebook">
+                    <img src="/Facebook_logo.svg" alt="Facebook Logo">
+                </a>
+                <a href="#" aria-label="Instagram">
+                    <img src=/Instagram_logo.svg" alt="Instagram Logo">
+                </a>
             </div>
             <p class="footer-text">&copy; 2025 CrossIt.ai. All rights reserved.</p>
         </div>
