Fix: Ensure public images are committed

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                 <div class="faq-item">
                     <div class="faq-question">Which platforms will CrossIt.ai work with?</div>
                     <div class="faq-answer">
-                        <p>CrossIt.ai is designed to work with all major platforms. Through cloud applications and limitless API possibilities</p>
+                        <p>CrossIt.ai is designed to work with all major platforms. Through cloud applications and limitless API possibilities!</p>
                     </div>
                 </div>
             </div>
