--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                     <img src="/Facebook_logo.svg" alt="Facebook Logo">
                 </a>
                 <a href="#" aria-label="Instagram">
-                    <img src=/Instagram_logo.svg" alt="Instagram Logo">
+                    <img src="/Instagram_logo.svg" alt="Instagram Logo">
                 </a>
             </div>
             <p class="footer-text">&copy; 2025 CrossIt.ai. All rights reserved.</p>
