Updated logo, socials

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         </div>
         <div class="container">
             <div class="logo-container">
-                <img src="/Crossitai.png" alt="CrossIt.ai Logo">
+                <img src="/CrossItLogo.svg" alt="CrossIt.ai Logo">
             </div>
             <p class="tagline">Revolutionizing AI Integration Across Platforms</p>
             <p class="hero-description">
@@ -507,16 +507,13 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#" aria-label="X (Twitter)">
+                <a href="https://x.com/CrossItai" aria-label="X (Twitter)">
                     <img src="/X_logo.jpg" alt="X (Twitter) Logo">
                 </a>
-                <a href="#" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/company/crossit-ai/ " aria-label="LinkedIn">
                     <img src="/LinkedIn_logo.svg" alt="LinkedIn Logo">
                 </a>
-                <a href="#" aria-label="Facebook">
-                    <img src="/Facebook_logo.svg" alt="Facebook Logo">
-                </a>
-                <a href="#" aria-label="Instagram">
+                <a href="https://www.instagram.com/crossit.ai/" aria-label="Instagram">
                     <img src="/Instagram_logo.svg" alt="Instagram Logo">
                 </a>
             </div>
